fix(): iOS load flicker pt17

--- a/public/styles/global-styles.css
+++ b/public/styles/global-styles.css
@@ -32,7 +32,7 @@
 
 @keyframes unmount {
 	100% {
-		filter: opacity(0);
+		opacity: 0;
 	}
 }
 
@@ -43,11 +43,11 @@
 @keyframes mount {
 	0% {
 		transform: translateX(10px);
-		filter: opacity(0);
+		opacity: 0;
 	}
 	100% {
 		transform: translateX(0);
-		filter: opacity(1);
+		opacity: 1;
 	}
 }
 
